alignment fix for body

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -3,4 +3,8 @@ body {
     color: var(--text);
     // overflow-x: hidden;
     max-width: 100vw;
+    margin-left: 5.5rem;
+    margin-top: 6rem;
+    margin-right: 1rem;
+    // text-align: right;
 }
